--- a/src/app/components/timeline-grid/timeline-grid.scss
+++ b/src/app/components/timeline-grid/timeline-grid.scss
@@ -32,11 +32,15 @@
       display: flex;
       align-items: center;
 
-      width: 380px;
+      width: 150px;
       padding: 1rem;
       height: 48px;
       border-bottom: 1px solid rgba(230, 235, 240, 1);
       color: rgba(3, 9, 41, 1);
+
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
 
       font-size: 0.875rem;
       font-weight: 500;
@@ -137,5 +141,17 @@
         }
       }
     }
+  }
+}
+
+@media  (min-width: 600px) {
+  .timeline-grid__sidebar-row {
+    width: 250px;
+  }
+}
+
+@media  (min-width: 992px) {
+  .timeline-grid__sidebar-row {
+    width: 380px;
   }
 }
