--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -5,7 +5,7 @@
 
   padding-left: 1rem;
   height: 100dvh;
-  background-color: rgba(255, 255, 255, 1);
+  background-color: var(--base-white-color);
 
   &-header {
     display: flex;
@@ -22,7 +22,7 @@
     row-gap: 1.5rem;
 
     &__title {
-      color: rgba(3, 9, 41, 1);
+      color: var(--base-text-dark-color);
       font-size: 24px;
       line-height: 34px;
       font-weight: 600;
