--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,23 @@
 @import "@ng-select/ng-select/themes/default.theme.css";
+
+:root {
+  --base-primary-shade-color: rgba(62, 64, 219, 1);
+  --base-border-color: rgba(230, 235, 240, 1);
+  --base-white-color:  rgba(255, 255, 255, 1);
+  --base-text-gray-color: rgba(104, 113, 150, 1);
+  --base-text-color: rgba(47, 48, 89, 1);
+  --base-text-dark-color: rgba(3, 9, 41, 1);
+  --base-blue-color: rgb(86, 89, 255, 1);
+  --base-open-status-color: rgba(0, 176, 191, 1);
+  --base-open-status-background-color: rgba(228, 253, 255, 1);
+  --base-in-progress-status-background-color: rgba(214, 216, 255, 1);
+  --base-completed-status-background-color: rgba(225, 255, 204, 1);
+  --base-completed-status-color:  rgba(8, 162, 104, 1);
+  --base-blocked-status-background-color: rgba(252, 238, 181, 1);
+  --base-blocked-status-color: rgba(177, 54, 0, 1);
+  --base-red-color: rgba(239, 68, 68, 1);
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -7,10 +26,7 @@
 
 body {
   font-family: "Circular-Std", serif;
-  font-size: 14px;
-  line-height: 1.5;
-  color: #1f2937;
-  background: #f8f9fb;
+  font-size: 16px;
 }
 
 ::-webkit-scrollbar {
@@ -18,89 +34,87 @@ body {
   width: 8px;
 }
 ::-webkit-scrollbar-track {
-  background: #f3f4f6;
+  background: var(--base-border-color);
   border-radius: 4px;
 }
 ::-webkit-scrollbar-thumb {
-  background: #d1d5db;
+  background: var(--base-text-gray-color);
   border-radius: 4px;
 }
-::-webkit-scrollbar-thumb:hover {
-  background: #9ca3af;
-}
 
 
-// region ng select
-.panel-form__field.ng-select {
+.ng-select {
   .ng-value {
     font-size: 0.875rem;
     font-weight: 600;
-    color: rgba(62, 64, 219, 1);
+    color: var(--base-primary-shade-color);
+  }
+
+  .ng-dropdown-panel {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 100%;
+    margin-top: 0.25rem !important;
+
+    box-shadow: 0 0 0 1px rgba(104, 113, 150, 0.1) , 0 2.5px 3px -1.5px rgba(200, 207, 233, 1) , 0 4.5px 5px -1px rgba(216, 220, 235, 1);
+    border: none;
+    border-radius: 5px;
+    background-color: var(--base-white-color);
+    padding: 0.75rem 0;
+
+    .ng-option {
+      color: var(--base-text-color) !important;
+      font-size: 14px;
+      font-weight: 400;
+      padding: 0.375rem 0.75rem;
+
+      &-marked {
+        background-color: transparent !important;
+        color: var(--base-text-dark-color) !important;
+      }
+
+      &-selected {
+        background-color: var(--base-white-color) !important;
+        color: var(--base-primary-shade-color) !important;
+        font-weight: 600;
+      }
+    }
   }
 }
 
-.ng-dropdown-panel {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 100%;
-  margin-top: 0.25rem !important;
-
-  box-shadow: 0 0 0 1px rgba(104, 113, 150, 0.1) , 0 2.5px 3px -1.5px rgba(200, 207, 233, 1) , 0 4.5px 5px -1px rgba(216, 220, 235, 1);
-  border: none;
-  border-radius: 5px;
-  background-color: rgba(255, 255, 255, 1);
-  padding: 0.75rem 0;
-}
-
-.ng-dropdown-panel .ng-option {
-  color: rgba(47, 48, 89, 1);
-  font-size: 14px;
-  font-weight: 400;
-  padding: 0.375rem 0.75rem;
-}
-
-.ng-dropdown-panel .ng-option.ng-option-selected {
-  background-color: #ffffff !important;
-  color: rgba(62, 64, 219, 1) !important;
-  font-weight: 600;
-}
-// endregion
-
-// region datepicker
 ngb-datepicker {
   border: none;
   box-shadow: 0 0 0 1px rgba(104, 113, 150, 0.1), 0 2.5px 3px -1.5px rgba(200, 207, 233, 1), 0 4.5px 5px -1px rgba(216, 220, 235, 1);
   border-radius: 8px;
   font-family: inherit;
-  background-color: #ffffff;
-}
+  background-color: var(--base-white-color);
 
-.ngb-dp-header {
-  padding: 1rem 0.5rem !important;
+  .ngb-dp-header {
+    padding: 1rem 0.5rem !important;
 
-  .visually-hidden {
-    display: none;
+    .visually-hidden {
+      display: none;
+    }
+
+    ngb-datepicker-navigation-select {
+      column-gap: 0.5rem;
+    }
+
+    ngb-datepicker-navigation {
+      column-gap: 1rem;
+    }
   }
 
-  ngb-datepicker-navigation-select {
-    column-gap: 0.5rem;
+  .ngb-dp-day {
+    &[aria-selected="true"] {
+      color: var(--base-blue-color) !important;
+      font-weight: 600;
+    }
   }
 
-  ngb-datepicker-navigation {
+  .ngb-dp-week {
+    padding: 0 0.5rem 0.5rem 0.5rem !important;
     column-gap: 1rem;
   }
 }
-
-.ngb-dp-day {
-  &[aria-selected="true"] {
-    color: rgba(86, 89, 255, 1) !important;
-    font-weight: 600;
-  }
-}
-
-.ngb-dp-week {
-  padding: 0 0.5rem 0.5rem 0.5rem !important;
-  column-gap: 1rem;
-}
-// endregion
