today button and restructure html of timeline component

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -18,7 +18,7 @@
         (zoomChange)="zoom.set($event)"
       />
 
-      <app-timeline-grid
+      <app-timeline
         [zoom]="zoom()"
         [workCenters]="workCenters"
         [orders]="orders()"
