--- a/src/app/components/work-order-bar/work-order-bar.scss
+++ b/src/app/components/work-order-bar/work-order-bar.scss
@@ -37,6 +37,10 @@
     background-color: rgba(255, 252, 241, 1);
   }
 
+  &__tooltip {
+    display: none;
+  }
+
   &__content {
     display: flex;
     flex: 1 1 auto;
@@ -51,6 +55,7 @@
       font-size: 0.875rem;
       font-weight: 400;
 
+      text-transform: capitalize;
       overflow: hidden;
       text-overflow: ellipsis;
     }
@@ -144,6 +149,27 @@
   &:hover {
     .work-order__actions-button {
       visibility: visible;
+    }
+
+    .work-order__tooltip {
+      position: absolute;
+      bottom: calc(100% + 5px);
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 3;
+
+      display: flex;
+
+      width: max-content;
+      box-shadow: 0 2px 4px -2px rgba(200, 207, 233, 1) , 0 0 16px -8px var(--base-border-color);
+      border-radius: 8px;
+      background-color: var(--base-text-gray-color);
+      color: var(--base-white-color);
+      padding: 0.25rem 0.5rem;
+
+      text-transform: capitalize;
+      font-size: 0.875rem;
+      font-weight: 400;
     }
   }
 }
