--- a/src/app/base-components/base-modal/base-modal.scss
+++ b/src/app/base-components/base-modal/base-modal.scss
@@ -10,7 +10,7 @@
 
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.15);
+  background-color: rgba(247, 249, 252, 0.5);
 
   &__content {
     display: flex;
