add timeline filler to add borders to the bottom

--- a/src/app/components/timeline/timeline.html
+++ b/src/app/components/timeline/timeline.html
@@ -34,17 +34,16 @@
           }
         </div>
 
-        @for (workCenter of workCenters; track workCenter.id; let isLast = $last) {
+        @for (workCenter of workCenters; track workCenter.id) {
           <div
             class="timeline-content__main-canvas__row"
-            [class.timeline-content__main-canvas__row-last]="isLast"
           >
             @for (column of columns; track column.label; let i = $index) {
               <div
                 class="timeline-content__main-canvas__row-column"
                 [style.left.px]="i * columnPixelWidth"
                 [style.width.px]="columnPixelWidth"
-                [class.is-current]="column.isCurrentPeriod"
+                [class.timeline-content__main-canvas__row-column__is-current]="column.isCurrentPeriod"
                 (click)="onColumnClick(workCenter, column, $event)"
               >
                 <div class="timeline-content__main-canvas__row-column__tooltip">
@@ -63,6 +62,17 @@
             }
           </div>
         }
+
+        <div class="timeline-content__main-canvas__filler">
+          @for (column of columns; track column.label; let i = $index) {
+            <div
+              class="timeline-content__main-canvas__filler-column"
+              [style.left.px]="i * columnPixelWidth"
+              [style.width.px]="columnPixelWidth"
+              [class.timeline-content__main-canvas__filler-column__is-current]="column.isCurrentPeriod"
+            ></div>
+          }
+        </div>
       </div>
     </div>
   </div>
